build: support Java 16 to build the project